--- a/style.css
+++ b/style.css
@@ -4,17 +4,68 @@
     box-sizing: border-box ;
 }
 
-body{
+body {
     background-color: white;
 }
 
-.my-day{
+.my-day {
     text-align: center;
     font-size: 50px;
 }
 
+#addTaskButton i {
+    margin-right: 5px;
+}
 
-/* Modal */
+#addTaskButton {
+    text-decoration: none;
+}
+
+.task {
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+}
+
+.task-options {
+    display: flex;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+.task-contanier {
+    margin-left: 150px;
+    margin-top: 100px;
+}
+
+.icon {
+    position: relative;
+    font-size: 20px;
+    color: grey;
+}
+
+.icon::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    bottom: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #e41f1f;
+    padding: 5px;
+    border-radius: 4px;
+    font-size: 12px;
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s;
+}
+
+.icon:hover::after {
+    opacity: 1;
+}
+
+/* Modal 
 .modal {
     display: none;
     position: fixed;
@@ -48,7 +99,11 @@ body{
 .close:hover{
     color: red;
 }
+*/
 
+.close{
+    display: none;
+}
 .taskname{
     color: rgba(134, 128, 128, 0.959); 
 }
